# Archetype-Asset

./: .gitignore  Cargo.toml  README.md
benches/: cache_hit_perf.rs  load_5mb_gltf.rs  memory_footprint.rs
examples/: async_streaming.rs  basic_loading.rs  spatial_preload.rs
src/: async_loading.rs  error.rs  lib.rs  model.rs  renderer.rs  texture.rs
src/cache/: metrics.rs  mod.rs  pool.rs
src/gpu/: mock.rs  mod.rs  vulkan.rs
src/loader/: gltf.rs  mod.rs  streaming.rs
src/lod/: mod.rs
src/runtime/: mock.rs  mod.rs  tokio_impl.rs
src/spatial/: mod.rs  preloader.rs
tests/: async_loading.rs  cache_generic.rs  feature_matrix.rs  gpu_abstraction.rs  runtime_abstraction.rs
